--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -26,9 +26,11 @@ ion-toolbar {
   background-color: white;
 }
 
-.ion-fixed {
-  height: 100%;
-  width: 100%;
+ion-input.custom {
+  --padding-bottom: 10px;
+  --padding-end: 10px;
+  --padding-start: 15px;
+  --padding-top: 10px;
 }
 
 /** Ionic CSS Variables **/
